@startuml UpdateCommandClassDiagram

class UpdateCommandClassDiagram {
    +execute(args: String[])
    -handleUpdateField(fieldData: String)
    -handleUpdateRecord(enteredString: String)
}

class Inventory
class Csv
class Ui

UpdateCommandClassDiagram --> Inventory : modifies
UpdateCommandClassDiagram --> Csv : updates
UpdateCommandClassDiagram --> Ui : displays

@enduml
